--- a/curriculum.html
+++ b/curriculum.html
@@ -101,21 +101,32 @@
       <h2>Experiencia Laboral</h2>
       <div>
         <h3>Desarrollador Web</h3>
-        <p>Empresa ABC - Ciudad, País | Fecha de inicio - Fecha de fin</p>
+        <p>
+          Innovatech Guatemala - Ciudad de Guatemala, Guatemala | Enero 2022 -
+          Presente
+        </p>
         <ul>
-          <li>Logros y responsabilidades...</li>
-          <li>Más logros y responsabilidades...</li>
+          <li>Desarrollo y mantenimiento de sitios web</li>
+          <li>Optimización del rendimiento y accesibilidad</li>
+          <li>Colaboración con diseñadores y equipo de UX/UI</li>
         </ul>
       </div>
 
       <div>
-        <h3>Otro Trabajo</h3>
-        <p>Otra Empresa - Ciudad, País | Fecha de inicio - Fecha de fin</p>
+        <h3>Soporte Técnico</h3>
+        <p>
+          Soluciones Digitales GT - Ciudad de Guatemala, Guatemala | Marzo 2020
+          - Diciembre 2021
+        </p>
         <ul>
-          <li>Logros y responsabilidades...</li>
-          <li>Más logros y responsabilidades...</li>
+          <li>Atención y resolución de incidencias técnicas</li>
+          <li>Instalación y configuración de software</li>
         </ul>
       </div>
+      <span
+        >Los datos presentados en este documento son ficticios y tienen fines
+        ilustrativos y demostrativos.</span
+      >
     </section>
 
     <section>
@@ -123,10 +134,10 @@
       <div>
         <h3>Grado Universitario</h3>
         <p>
-          Nombre de la Universidad - Ciudad, País | Fecha de inicio - Fecha de
-          fin
+          Universidad Galileo - Ciudad de Guatemala, Guatemala | Enero 2025 -
+          Presente
         </p>
-        <p>Título obtenido y especialización (si aplica)</p>
+        <p>Tecnico en Desarrollo de Software</p>
       </div>
     </section>
   </body>
