Add contact info

--- a/curriculum.html
+++ b/curriculum.html
@@ -84,11 +84,11 @@
       <div class="info">
         <div>
           <h3>Nombre</h3>
-          <p>Tu Nombre</p>
+          <p>Guillermo Eliseo Gómez Reyes</p>
         </div>
         <div>
           <h3>Correo Electrónico</h3>
-          <p>tucorreo@gmail.com</p>
+          <p>eliseo.gomez@galileo.edu</p>
         </div>
         <div>
           <h3>Teléfono</h3>
